--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+  <h1>Hiking spots in kitsap county</h1>
+  <p>There are lots of lovely spots to take a hike in our county, here are just a few:</p>
 </body>
 </html>
