Possible fix for images not working on website

--- a/index.html
+++ b/index.html
@@ -28,20 +28,20 @@
     <ul>
       <li>
         <p>Gerry Mulligan</p>
-        <img src="/images/gerry_mulligan.jpg" alt="Image of Gerry Mulligan sittin with his baritone saxophone"
+        <img src="images/gerry_mulligan.jpg" alt="Image of Gerry Mulligan sittin with his baritone saxophone"
           height="180">
       </li>
       <li>
         <p>Maynard Ferguson</p>
-        <img src="/images/maynard_ferguson.jpg" alt="Image of Maynard Ferguson playing his trumpet" height="150">
+        <img src="images/maynard_ferguson.jpg" alt="Image of Maynard Ferguson playing his trumpet" height="150">
       </li>
       <li>
         <p>Stan Getz</p>
-        <img src="/images/stan_getz.jpg" alt="Image of Stan Getz playing his tenor saxophone" height="180">
+        <img src="images/stan_getz.jpg" alt="Image of Stan Getz playing his tenor saxophone" height="180">
       </li>
       <li>
         <p>Michel Camilo</p>
-        <img src="/images/michel_camilo.jpg" alt="Michel Camilo with his piano" height="170">
+        <img src="images/michel_camilo.jpg" alt="Michel Camilo with his piano" height="170">
       </li>
     </ul>
 
