--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     <!--
       The following section is an unordered list of favorite artists with their images displayed as well
     -->
-    <h2>Favorite Artists</h2>
+    <h2>Favorite Artists THIS IS A TEST</h2>
     <p>The following is a list of a few of Evan's favorite jazz artists.</p>
     <ul>
       <li>
         <p>Gerry Mulligan</p>
-        <img src="images/gerry_mulligan.jpg" alt="Image of Gerry Mulligan sittin with his baritone saxophone"
+        <img src="images/gerry_mulligan.jpg" alt="Image of Gerry Mulligan sitting with his baritone saxophone"
           height="180">
       </li>
       <li>
