--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!--
       The following section is an unordered list of favorite artists with their images displayed as well
     -->
-    <h2>Favorite Artists THIS IS A TEST</h2>
+    <h2>Favorite Artists</h2>
     <p>The following is a list of a few of Evan's favorite jazz artists.</p>
     <ul>
       <li>
