--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="Description"
     content="A quick explanation of jazz and a list of Evan's favorite jazz pieces throughout history.">
+  <link rel="shortcut icon" href="images/music-note-alt.png">
+  <link rel="stylesheet" href="styles/styles.css">
   <title>Evan's Favorite Jazz Music</title>
 </head>
 
 <body>
   <header>
+    <img src="/images/music-note.png" alt="music note image" height="50em">
     <h1>Evan's Favorite Jazz Music Artists &amp; Songs</h1>
     <p>Jazz music started in the late 19th century in New Orleans, Louisiana with roots in blues and ragtime. Jazz is
       typically characterized by swing, blue notes, complex chords, polyrhythms, and improvisation. Evan has been
@@ -23,7 +26,7 @@
     <!--
       The following section is an unordered list of favorite artists with their images displayed as well
     -->
-    <h2>Favorite Artists</h2>
+    <h2 class="bodyheader">Favorite Artists</h2>
     <p>The following is a list of a few of Evan's favorite jazz artists.</p>
     <ul>
       <li>
@@ -48,7 +51,7 @@
     <!--
       The following section is an ordered list of favorite songs with links to the songs' youtube video
     -->
-    <h2>Top 10 Favorite Songs</h2>
+    <h2 class="bodyheader">Top 10 Favorite Songs</h2>
     <p>The following is a list of Evan's favorite jazz songs with links to their respective Youtube videos. Although
       some of the artists are not listed as favorites above, it does not mean they are not amazing!</p>
     <ol>
@@ -89,7 +92,7 @@
     <h3>Words from the author</h3>
     <p>It was very hard to decide on just 10 songs that I liked the most, there are around 100 jazz songs that I love
       listening to but it was fun to make a list like this to share on this webpage!</p>
-    <p><strong>&copy; Evan Peterson 2023</strong></p>
+    <p id="copyright"><strong>&copy; Evan Peterson 2023</strong></p>
   </footer>
 </body>
 
