fixed error with image reference

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <header>
-    <img src="/images/music-note.png" alt="music note image" height="50em">
+    <img src="images/music-note.png" alt="music note image" height="50em">
     <h1>Evan's Favorite Jazz Music Artists &amp; Songs</h1>
     <p>Jazz music started in the late 19th century in New Orleans, Louisiana with roots in blues and ragtime. Jazz is
       typically characterized by swing, blue notes, complex chords, polyrhythms, and improvisation. Evan has been
