Completed Module 5 Assignment Create your own website

--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
 
 <body>
   <header>
-    <img src="images/music-note.png" alt="music note image" height="50em">
-    <h1>Evan's Favorite Jazz Music Artists &amp; Songs</h1>
-    <p>Jazz music started in the late 19th century in New Orleans, Louisiana with roots in blues and ragtime. Jazz is
+    <div class="Title">
+      <img src="images/music-note.png" alt="music note image" height="50em" id="imgleft">
+      <h1>Evan's Favorite Jazz Music Artists &amp; Songs</h1>
+      <img src="images/music-note.png" alt="music note image" height="50em" id="imgright">
+    </div>
+    <p><a href="pages/jazz-wikipedia.html">Jazz music</a> started in the late 19th century in New Orleans, Louisiana
+      with roots in blues and ragtime. Jazz is
       typically characterized by swing, blue notes, complex chords, polyrhythms, and improvisation. Evan has been
       playing saxophone for nearly 8 years and found a love for jazz after he took music theory in high school. This
       webpage has a list of a few of Evan's favorite jazz artists and his top 10 favorite jazz songs.</p>
@@ -26,73 +30,81 @@
     <!--
       The following section is an unordered list of favorite artists with their images displayed as well
     -->
-    <h2 class="bodyheader">Favorite Artists</h2>
-    <p>The following is a list of a few of Evan's favorite jazz artists.</p>
-    <ul>
-      <li>
-        <p>Gerry Mulligan</p>
-        <img src="images/gerry_mulligan.jpg" alt="Image of Gerry Mulligan sitting with his baritone saxophone"
-          height="180">
-      </li>
-      <li>
-        <p>Maynard Ferguson</p>
-        <img src="images/maynard_ferguson.jpg" alt="Image of Maynard Ferguson playing his trumpet" height="150">
-      </li>
-      <li>
-        <p>Stan Getz</p>
-        <img src="images/stan_getz.jpg" alt="Image of Stan Getz playing his tenor saxophone" height="180">
-      </li>
-      <li>
-        <p>Michel Camilo</p>
-        <img src="images/michel_camilo.jpg" alt="Michel Camilo with his piano" height="170">
-      </li>
-    </ul>
+    <div class="images-list">
+      <h2 class="bodyheader">Favorite Artists</h2>
+      <p>The following is a list of a few of Evan's favorite jazz artists.</p>
+      <ul>
+        <li>
+          <p>Gerry Mulligan</p>
+          <img src="images/gerry_mulligan.jpg" alt="Image of Gerry Mulligan sitting with his baritone saxophone"
+            height="180">
+        </li>
+        <li>
+          <p>Maynard Ferguson</p>
+          <img src="images/maynard_ferguson.jpg" alt="Image of Maynard Ferguson playing his trumpet" height="150">
+        </li>
+        <li>
+          <p>Stan Getz</p>
+          <img src="images/stan_getz.jpg" alt="Image of Stan Getz playing his tenor saxophone" height="180">
+        </li>
+        <li>
+          <p>Michel Camilo</p>
+          <img src="images/michel_camilo.jpg" alt="Michel Camilo with his piano" height="170">
+        </li>
+      </ul>
+    </div>
 
     <!--
       The following section is an ordered list of favorite songs with links to the songs' youtube video
     -->
-    <h2 class="bodyheader">Top 10 Favorite Songs</h2>
-    <p>The following is a list of Evan's favorite jazz songs with links to their respective Youtube videos. Although
-      some of the artists are not listed as favorites above, it does not mean they are not amazing!</p>
-    <ol>
-      <li>
-        <a href="https://youtu.be/xWVfJTXi8-I">Just Kidding - Michel Camilo</a>
-      </li>
-      <li>
-        <a href="https://youtu.be/bp2QFbOtkSM">Desafinado - Stan Getz</a>
-      </li>
-      <li>
-        <a href="https://youtu.be/ljuVstcXCzo">Utter Chaos - Gerry Mulligan</a>
-      </li>
-      <li>
-        <a href="https://youtu.be/wcfBfIl2gUw">Cruisin' For A Bluessin' - Maynard Ferguson</a>
-      </li>
-      <li>
-        <a href="https://youtu.be/1ItCYojAI14">Bucks County Bounce - Sam "The Man" Taylor</a>
-      </li>
-      <li>
-        <a href="https://youtu.be/NdoB1P0tKwA">Moanin' - Mingus Big Band</a>
-      </li>
-      <li>
-        <a href="https://youtu.be/2HfAPT7_zgQ">Walkin'shoes - Gerry Mulligan</a>
-      </li>
-      <li>
-        <a href="https://youtu.be/l9b_Ia6lGXs">Don't Let The Sun Go Down On Me - Maynard Ferguson</a>
-      </li>
-      <li>
-        <a href="https://youtu.be/j3iT58yge5s">Just Like You - Michel Camilo</a>
-      </li>
-      <li>
-        <a href="https://youtu.be/zEE810G6xNI">Fine and Mellow - Gerry Mulligan</a>
-      </li>
-    </ol>
+    <div class="favorites-list">
+      <h2 class="bodyheader">Top 10 Favorite Songs</h2>
+      <p>The following is a list of Evan's favorite jazz songs with links to their respective Youtube videos. Although
+        some of the artists are not listed as favorites above, it does not mean they are not amazing!</p>
+      <ol>
+        <li>
+          <a href="https://youtu.be/xWVfJTXi8-I">Just Kidding - Michel Camilo</a>
+        </li>
+        <li>
+          <a href="https://youtu.be/bp2QFbOtkSM">Desafinado - Stan Getz</a>
+        </li>
+        <li>
+          <a href="https://youtu.be/ljuVstcXCzo">Utter Chaos - Gerry Mulligan</a>
+        </li>
+        <li>
+          <a href="https://youtu.be/wcfBfIl2gUw">Cruisin' For A Bluessin' - Maynard Ferguson</a>
+        </li>
+        <li>
+          <a href="https://youtu.be/1ItCYojAI14">Bucks County Bounce - Sam "The Man" Taylor</a>
+        </li>
+        <li>
+          <a href="https://youtu.be/NdoB1P0tKwA">Moanin' - Mingus Big Band</a>
+        </li>
+        <li>
+          <a href="https://youtu.be/2HfAPT7_zgQ">Walkin'shoes - Gerry Mulligan</a>
+        </li>
+        <li>
+          <a href="https://youtu.be/l9b_Ia6lGXs">Don't Let The Sun Go Down On Me - Maynard Ferguson</a>
+        </li>
+        <li>
+          <a href="https://youtu.be/j3iT58yge5s">Just Like You - Michel Camilo</a>
+        </li>
+        <li>
+          <a href="https://youtu.be/zEE810G6xNI">Fine and Mellow - Gerry Mulligan</a>
+        </li>
+      </ol>
+    </div>
   </main>
 
   <footer>
-    <h3>Words from the author</h3>
-    <p>It was very hard to decide on just 10 songs that I liked the most, there are around 100 jazz songs that I love
-      listening to but it was fun to make a list like this to share on this webpage!</p>
-    <p id="copyright"><strong>&copy; Evan Peterson 2023</strong></p>
+    <div class="foot-notes">
+      <h3>Words from the author</h3>
+      <p>It was very hard to decide on just 10 songs that I liked the most, there are around 100 jazz songs that I love
+        listening to but it was fun to make a list like this to share on this webpage!</p>
+    </div>
+    <div class="copyright">
+      <p><strong>&copy; Evan Peterson 2023</strong></p>
+    </div>
   </footer>
 </body>
 
