added flex boxes and grids

--- a/index.html
+++ b/index.html
@@ -18,89 +18,90 @@
   </header>
   <main>
     <!-- Navigation Menu Coding -->
-    <div>
-      <nav id="nav_menu">
-        <ul>
-          <li><a href="index.html" class="current">Home Page</a></li>
-          <li><a href="pages/jazz-information.html">Jazz Info</a></li>
-          <li><a href="pages/artists.html" class="lastitem">Artists</a>
-            <ul id="drop-down">
-              <li><a href="people/gerry.html" class="lastitem">Gerry Mulligan</a></li>
-              <li><a href="people/maynard.html" class="lastitem">Maynard Ferguson</a></li>
-              <li><a href="people/stan.html" class="lastitem">Stan Getz</a></li>
-              <li><a href="people/michel.html" class="lastitem">Michel Camilo</a></li>
-            </ul>
-          </li>
-        </ul>
-      </nav>
-    </div>
+    <nav id="nav_menu">
+      <ul>
+        <li><a href="index.html" class="current">Home Page</a></li>
+        <li><a href="pages/jazz-information.html">Jazz Info</a></li>
+        <li><a href="pages/artists.html" class="lastitem">Artists</a>
+          <ul id="drop-down">
+            <li><a href="people/gerry.html" class="lastitem">Gerry Mulligan</a></li>
+            <li><a href="people/maynard.html" class="lastitem">Maynard Ferguson</a></li>
+            <li><a href="people/stan.html" class="lastitem">Stan Getz</a></li>
+            <li><a href="people/michel.html" class="lastitem">Michel Camilo</a></li>
+          </ul>
+        </li>
+      </ul>
+    </nav>
     <p id="intro"><span>Jazz</span> music started in the late 19th century in New Orleans, Louisiana
       with roots in blues and ragtime. Jazz is
       typically characterized by swing, blue notes, complex chords, polyrhythms, and improvisation. Evan has been
       playing saxophone for nearly 8 years and found a love for jazz after he took music theory in high school. This
       webpage has a list of a few of Evan's favorite jazz artists and his top 10 favorite jazz songs.</p>
-    <!-- The following section is an unordered list of favorite artists with their images displayed as well -->
-    <div class="images-list">
-      <h2 class="bodyheader">Favorite Artists</h2>
-      <p>The following is a list of a few of Evan's favorite jazz artists.</p>
-      <ul>
-        <li>
-          <p>Gerry Mulligan</p>
-          <img src="images/gerry_mulligan.jpg" alt="Image of Gerry Mulligan sitting with his baritone saxophone"
-            id="gerry">
-        </li>
-        <li>
-          <p>Maynard Ferguson</p>
-          <img src="images/maynard_ferguson.jpg" alt="Image of Maynard Ferguson playing his trumpet" id="maynard">
-        </li>
-        <li>
-          <p>Stan Getz</p>
-          <img src="images/stan_getz.jpg" alt="Image of Stan Getz playing his tenor saxophone" id="stan">
-        </li>
-        <li>
-          <p>Michel Camilo</p>
-          <img src="images/michel_camilo.jpg" alt="Michel Camilo with his piano" id="michel">
-        </li>
-      </ul>
-    </div>
+    <div id="artsong">
+      <!-- The following section is an unordered list of favorite artists with their images displayed as well -->
+      <div class="images-list">
+        <h2 class="bodyheader">Favorite Artists</h2>
+        <p>The following is a list of a few of Evan's favorite jazz artists.</p>
+        <ul>
+          <li>
+            <p>Gerry Mulligan</p>
+            <img src="images/gerry_mulligan.jpg" alt="Image of Gerry Mulligan sitting with his baritone saxophone"
+              id="gerry">
+          </li>
+          <li>
+            <p>Maynard Ferguson</p>
+            <img src="images/maynard_ferguson.jpg" alt="Image of Maynard Ferguson playing his trumpet" id="maynard">
+          </li>
+          <li>
+            <p>Stan Getz</p>
+            <img src="images/stan_getz.jpg" alt="Image of Stan Getz playing his tenor saxophone" id="stan">
+          </li>
+          <li>
+            <p>Michel Camilo</p>
+            <img src="images/michel_camilo.jpg" alt="Michel Camilo with his piano" id="michel">
+          </li>
+        </ul>
+      </div>
 
-    <!-- The following section is an ordered list of favorite songs with links to the songs' youtube video -->
-    <div class="favorites-list">
-      <h2 class="bodyheader">Top 10 Favorite Songs</h2>
-      <p>The following is a list of Evan's favorite jazz songs with links to their respective Youtube videos. Although
-        some of the artists are not listed as favorites above, it does not mean they are not amazing!</p>
-      <ol>
-        <li>
-          <a href="https://youtu.be/xWVfJTXi8-I">Just Kidding - Michel Camilo</a>
-        </li>
-        <li>
-          <a href="https://youtu.be/bp2QFbOtkSM">Desafinado - Stan Getz</a>
-        </li>
-        <li>
-          <a href="https://youtu.be/ljuVstcXCzo">Utter Chaos - Gerry Mulligan</a>
-        </li>
-        <li>
-          <a href="https://youtu.be/wcfBfIl2gUw">Cruisin' For A Bluessin' - Maynard Ferguson</a>
-        </li>
-        <li>
-          <a href="https://youtu.be/1ItCYojAI14">Bucks County Bounce - Sam "The Man" Taylor</a>
-        </li>
-        <li>
-          <a href="https://youtu.be/NdoB1P0tKwA">Moanin' - Mingus Big Band</a>
-        </li>
-        <li>
-          <a href="https://youtu.be/2HfAPT7_zgQ">Walkin'shoes - Gerry Mulligan</a>
-        </li>
-        <li>
-          <a href="https://youtu.be/l9b_Ia6lGXs">Don't Let The Sun Go Down On Me - Maynard Ferguson</a>
-        </li>
-        <li>
-          <a href="https://youtu.be/j3iT58yge5s">Just Like You - Michel Camilo</a>
-        </li>
-        <li>
-          <a href="https://youtu.be/zEE810G6xNI">Fine and Mellow - Gerry Mulligan</a>
-        </li>
-      </ol>
+      <!-- The following section is an ordered list of favorite songs with links to the songs' youtube video -->
+      <div class="favorites-list">
+        <h2 class="bodyheader">Top 10 Favorite Songs</h2>
+        <p>The following is a list of Evan's favorite jazz songs with links to their respective Youtube videos. Although
+          some of the artists are not listed as favorites above, it does not mean they are not amazing!</p>
+        <ol>
+          <li>
+            <a href="https://youtu.be/xWVfJTXi8-I" target="_blank">Just Kidding - Michel Camilo</a>
+          </li>
+          <li>
+            <a href="https://youtu.be/bp2QFbOtkSM" target="_blank">Desafinado - Stan Getz</a>
+          </li>
+          <li>
+            <a href="https://youtu.be/ljuVstcXCzo" target="_blank">Utter Chaos - Gerry Mulligan</a>
+          </li>
+          <li>
+            <a href="https://youtu.be/wcfBfIl2gUw" target="_blank">Cruisin' For A Bluessin' - Maynard Ferguson</a>
+          </li>
+          <li>
+            <a href="https://youtu.be/1ItCYojAI14" target="_blank">Bucks County Bounce - Sam "The Man" Taylor</a>
+          </li>
+          <li>
+            <a href="https://youtu.be/NdoB1P0tKwA" target="_blank">Moanin' - Mingus Big Band</a>
+          </li>
+          <li>
+            <a href="https://youtu.be/2HfAPT7_zgQ" target="_blank">Walkin'shoes - Gerry Mulligan</a>
+          </li>
+          <li>
+            <a href="https://youtu.be/l9b_Ia6lGXs" target="_blank">Don't Let The Sun Go Down On Me - Maynard
+              Ferguson</a>
+          </li>
+          <li>
+            <a href="https://youtu.be/j3iT58yge5s" target="_blank">Just Like You - Michel Camilo</a>
+          </li>
+          <li>
+            <a href="https://youtu.be/zEE810G6xNI" target="_blank">Fine and Mellow - Gerry Mulligan</a>
+          </li>
+        </ol>
+      </div>
     </div>
   </main>
 
