--- a/pages/artists.html
+++ b/pages/artists.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="../images/music-note-alt.png">
   <link rel="stylesheet" href="../styles/newstyles.css">
+  <link rel="stylesheet" href="../styles/artists.css">
   <title>Artists</title>
 </head>
 
@@ -29,7 +30,53 @@
         </li>
       </ul>
     </nav>
-    <p>Under Contruction</p>
+    <div class="artists">
+      <div id="mulligan">
+        <h3>Gerry Mulligan</h3>
+        <img src="../images/gerry_mulligan.jpg" alt="Image of Gerry Mulligan sitting with his baritone saxophone"
+          id="gerry">
+        <p>Gerry Mulligan was an American jazz saxophonist, composer, and arranger known for his distinctive sound on
+          the baritone saxophone. He was a key figure in the cool jazz movement of the 1950s and played a significant
+          role in shaping the West Coast jazz style. Mulligan's arrangements were characterized by their sophisticated
+          harmonies and relaxed, understated approach. He gained popularity for his work with the pianoless quartet,
+          featuring Chet Baker on trumpet, which showcased his melodic improvisations and skillful interplay with other
+          musicians. Mulligan's contributions to jazz as a performer, composer, and arranger have left a lasting legacy
+          in the genre.</p>
+      </div>
+      <div id="ferguson">
+        <h3>Maynard Ferguson</h3>
+        <img src="../images/maynard_ferguson.jpg" alt="Image of Maynard Ferguson playing his trumpet" id="maynard">
+        <p>Maynard Ferguson was a Canadian jazz trumpeter and bandleader known for his virtuosic playing and high-energy
+          performances. He had a remarkable range and ability to hit incredibly high notes, earning him the nickname
+          "The Screaming Trumpet." Ferguson gained popularity in the 1950s and 1960s as a member of Stan Kenton's
+          orchestra before forming his own band, the Maynard Ferguson Orchestra. Throughout his career, Ferguson pushed
+          the boundaries of jazz with his fusion of big band, bebop, and rock influences, creating a unique and powerful
+          sound that captivated audiences worldwide. His recordings and live performances showcased his incredible
+          technical prowess and his ability to connect with audiences through his passionate and dynamic playing.</p>
+      </div>
+      <div id="getz">
+        <h3>Stan Getz</h3>
+        <img src="../images/stan_getz.jpg" alt="Image of Stan Getz playing his tenor saxophone" id="stan">
+        <p>Stan Getz was an iconic American jazz saxophonist known for his smooth tone and lyrical playing style. He
+          rose to prominence in the 1950s as one of the leading figures in the cool jazz movement. Getz's melodic
+          improvisations and romantic sound captivated listeners and earned him widespread acclaim. His collaboration
+          with Brazilian bossa nova guitarist João Gilberto on the album "Getz/Gilberto" produced the timeless hit "The
+          Girl from Ipanema," which propelled him to international fame. Throughout his career, Getz maintained a
+          distinctive voice on the tenor saxophone and left a lasting impact on the jazz world with his memorable
+          recordings and beautiful interpretations.</p>
+      </div>
+      <div id="camilo">
+        <h3>Michel Camilo</h3>
+        <img src="../images/michel_camilo.jpg" alt="Michel Camilo with his piano" id="michel">
+        <p>Michel Camilo is a renowned Dominican jazz pianist, composer, and bandleader. His music combines elements of
+          jazz, Afro-Caribbean rhythms, and classical influences, showcasing his virtuosity and unique musical vision.
+          Camilo's energetic and passionate playing style has made him a highly sought-after performer, and he has
+          collaborated with esteemed artists such as Dizzy Gillespie and Tito Puente. He is known for his exceptional
+          technical skills, improvisational abilities, and ability to blend different musical genres seamlessly.
+          Camilo's compositions often feature intricate rhythms, harmonic complexity, and a fusion of various cultural
+          influences, making him a true innovator in the world of jazz.</p>
+      </div>
+    </div>
   </main>
   <footer>
     <div class="returntotop">
