added requirements for module 8

--- a/index.html
+++ b/index.html
@@ -9,12 +9,18 @@
     content="A quick explanation of jazz and a list of Evan's favorite jazz pieces throughout history.">
   <link rel="shortcut icon" href="images/music-note-alt.png">
   <link rel="stylesheet" href="styles/newstyles.css">
+  <script src="https://kit.fontawesome.com/c4b9b106e7.js" crossorigin="anonymous"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@600&display=swap" rel="stylesheet">
   <title>Evan's Favorite Jazz Music</title>
 </head>
 
 <body>
   <header>
-    <h1>Evan's Favorite Jazz Music Artists &amp; Songs</h1>
+    <h1><i class="fa-solid fa-music"></i> Evan's Favorite Jazz Music Artists &amp; Songs <i
+        class="fa-solid fa-music"></i>
+    </h1>
   </header>
   <main>
     <!-- Navigation Menu Coding -->
