--- a/pages/artists.html
+++ b/pages/artists.html
@@ -8,12 +8,16 @@
   <link rel="shortcut icon" href="../images/music-note-alt.png">
   <link rel="stylesheet" href="../styles/newstyles.css">
   <link rel="stylesheet" href="../styles/artists.css">
+  <script src="https://kit.fontawesome.com/c4b9b106e7.js" crossorigin="anonymous"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@600&display=swap" rel="stylesheet">
   <title>Artists</title>
 </head>
 
 <body>
   <header>
-    <h1>Best Jazz Artists</h1>
+    <h1><i class="fa-solid fa-music"></i> Best Jazz Artists <i class="fa-solid fa-music"></i></h1>
   </header>
   <main>
     <nav id="nav_menu">
