--- a/pages/jazz-information.html
+++ b/pages/jazz-information.html
@@ -7,12 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../images/music-note-alt.png">
     <link rel="stylesheet" href="../styles/newstyles.css">
+    <script src="https://kit.fontawesome.com/c4b9b106e7.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@600&display=swap" rel="stylesheet">
     <title>Jazz Information</title>
 </head>
 
 <body>
     <header>
-        <h1>A Short History and Definition of Jazz</h1>
+        <h1><i class="fa-solid fa-music"></i> A Short History and Definition of Jazz <i class="fa-solid fa-music"></i>
+        </h1>
     </header>
     <main>
         <!-- Navigation Menu Coding -->
