--- a/pages/jazz-information.html
+++ b/pages/jazz-information.html
@@ -63,6 +63,8 @@
                 has a rich history and has produced numerous legendary musicians who have made lasting contributions to
                 the art form.
 
+                <img src="../images/africanjazz.png" alt="example of the root of jazz" id="rythm">
+
                 Roots in African and African American Music: The roots of jazz can be traced back to the musical
                 traditions of West Africa, where rhythmic complexity, improvisation, and call-and-response singing were
                 prominent. These musical elements were brought to the United States through the transatlantic slave
@@ -78,7 +80,7 @@
 
                 The Influence of Brass Bands: Brass bands were also influential in the development of jazz. These bands,
                 consisting of brass instruments and percussion, performed at various social events and funerals. They
-                played a crucial role in popularizing improvisation and ensemble playing.
+                played a crucial role in popularizing improvisation and ensemble playing.<br><br>
 
                 The Jazz Age and the Roaring Twenties: The 1920s marked a period of great popularity and innovation for
                 jazz. This era, known as the Jazz Age or the Roaring Twenties, saw the rise of jazz as the dominant
@@ -88,6 +90,8 @@
                 The Swing Era: In the 1930s and 1940s, jazz entered the Swing Era. Big bands led by influential
                 musicians such as Duke Ellington, Count Basie, and Benny Goodman became popular. Swing music featured
                 intricate arrangements and encouraged dancing, attracting a broad audience.
+
+                <img src="../images/duke_ellington.jpg" alt="duke ellington playing at the hurricane club" id="duke">
 
                 Bebop and Modern Jazz: In the 1940s, a new form of jazz called bebop emerged as a reaction against the
                 commercialization of swing. Bebop emphasized improvisation, complex harmonies, and fast tempos.
@@ -113,6 +117,8 @@
                 jazz compositions. It was written by saxophonist Paul Desmond and performed by the Dave Brubeck Quartet.
                 The song's distinctive 5/4 time signature, memorable melody, and captivating improvisations have made it
                 a timeless classic.
+                
+                <img src="../images/louis_armstrong.jpg" alt="louis armstrong playing his trumpet" id="louis">
 
                 "Summertime" by George Gershwin: Originally composed for the opera "Porgy and Bess" in 1935,
                 "Summertime" has become a jazz standard, with countless interpretations by various artists. The song's
@@ -136,7 +142,7 @@
                 "A Love Supreme" by John Coltrane: Released in 1965, "A Love Supreme" is a seminal album by saxophonist
                 John Coltrane. It is regarded as a masterpiece of avant-garde jazz and spiritual exploration. The
                 album's title track, with its passionate and transcendent improvisations, showcases Coltrane's
-                exceptional talent and his quest for musical and personal enlightenment.
+                exceptional talent and his quest for musical and personal enlightenment.<br><br>
 
                 "Misty" by Erroll Garner: Composed by Erroll Garner in 1954, "Misty" has become a jazz standard,
                 celebrated for its romantic and lyrical qualities. The song's memorable melody, lush harmonies, and
